# api_parser_faust

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
parser_app/: __main__.py  app.py  constants.py  schemas.py
